# AutoChain-B2B-Supply-Chain-Copilot

./: .env.example  README.md  Readme.md  blockchain_client.py  clarification_handler.py  clarification_tool.py  distance_calculator_tool.py  finance_tool.py  financial_tool.py  inbox.txt  inventory_tool.py  logistics_tool.py  main.py  main_minimal.py  mainblock.py  multi_step_order.py  negotiation_agent.py  order_tool.py  orders.json  pricing_tool.py  processing_orchestrator.py  pyproject.toml  start_server.py  storage.py  supplier_tool.py  validator_tool.py  websocket_manager.py  websocket_models.py  websocket_tool_wrapper.py
blockchain/: .env.example  DEPLOYMENT_GUIDE.md  README.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md  __init__.py  anchor.py  block.py  chain.py  config.py  contract_utils.py  demo_chain.py  deploy_contract.py  emitter.py  error_handling.py  example_contract_usage.py  hashing.py  models.py  notery.py  polygon_deployment.py  requirements.txt  security_validator.py  test_contract_deployment.py  test_contract_interaction.py  validate_contract_integration.py  validate_setup.py
frontend/: .env.sample  BACKEND_WEBSOCKET_DIAGNOSIS.md  BUILD_SUCCESS_SUMMARY.md  COMPLETION_CARD_FINAL_FIXES.md  COMPLETION_CARD_FIXES.md  DEBUG_COMPLETION_CARD.md  EMAIL_COMPLETION_CARD_FIXES.md  EMERGENCY_FIX.md  FINAL_BUILD_STATUS.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUCCESS_STATUS.md  FIXES_APPLIED.md  PERFORMANCE_SUMMARY.md  PLANNING_STEP_AND_COMPLETION_CARD_IMPLEMENTATION.md  PREVIEW_FIX_GUIDE.md  PREVIEW_TROUBLESHOOTING.md  REACT_19_FIX.md  (+30 more)
(+230 files in other folders)
